--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "homepage": "https://gamza222.github.io/techsite/",
   "dependencies": {
+    "@emailjs/browser": "^3.4.0",
     "@reduxjs/toolkit": "^1.7.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.1",
+    "emailjs-com": "^3.2.0",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
